[project]
name = "asv-exp"
version = "0.1.0"
description = "Experimental Countermeasures for Audio Speaker Verification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "torch==2.9.1",
    "transformers>=5.0.0",
]

[project.optional-dependencies]
dip = [
    "scikit-image>=0.26.0",
    "timm>=1.0.24",
    "torchvision==0.24.1",
]
audio = [
    "librosa>=0.11.0",
    "torchaudio==2.9.1",
]
viz = [
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]
tracking = [
    "tensorboard>=2.20.0",
    "wandb>=0.24.1",
]

[dependency-groups]
dev = [
    "notebook>=7.5.3",
]
